CarfulMetaData/main/default/objects/Product2/fields/Vehicle_Image__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Image__c</fullName>
    <label>Vehicle Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>