CarfulMetaData/main/default/objects/Product2/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Make</valueSetName>
    </valueSet>
</CustomField>