CarfulMetaData/main/default/objects/Product2/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicle_Make__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Model</valueSetName>
    </valueSet>
</CustomField>